# masterpassword-open

./: .gitignore  README.md  pyproject.toml
security/: chatbot_masterpassword.py  deduplication_framework.py  deduplication_strategy.md  deepagent.py  embed_and_store.py  eval_report.py  llm_judge_report_eval.py  pipeline.py  requirements.txt  threat_modelling.py
security/findings/: GROUND_TRUTH.json  eval_2026-04-27_11-21-57.json  eval_2026-04-27_11-31-53.json  eval_2026-04-27_14-45-09.json  eval_2026-04-27_15-55-24.json  sast_2026-04-27_11-21-57.json  sast_2026-04-27_11-21-57.md  sast_2026-04-27_11-31-53.json  sast_2026-04-27_11-31-53.md  sast_2026-04-27_14-45-09.json  sast_2026-04-27_14-45-09.md  sast_2026-04-27_15-55-24.json  sast_2026-04-27_15-55-24.md  threat_model_2026-04-27_13-42-58.md  threat_model_2026-04-27_14-44-52.md  threat_model_2026-04-27_15-55-09.md
security/master_password.faiss/: index.faiss  index.pkl
security/skills-to-consider/dotnet-standards/: SKILL.md
security/skills/dotnet-standards/: SKILL.md
security/verifiers/: input-validation.json  parameterized-queries.json
src/MasterPassword/: Dockerfile  MasterPassword.csproj  Program.cs  Startup.cs  appsettings.Development.json
src/MasterPassword.BusinessLogic/: AppConfiguration.cs  BusinessLogicRegistration.cs  Encryptor.cs  KeyDeriver.cs  MasterPassword.BusinessLogic.csproj  TokenGenerator.cs
src/MasterPassword.DataAccess.MongoDbAtlas/: DataAccessRegistration.cs  MasterPassword.DataAccess.MongoDbAtlas.csproj  MongoCollectionExtensions.cs  MongoDbRepository.cs
tmp/: nuspec_summary.md
(+80 files in other folders)
