[project]
name = "masterpassword-open"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.96",
    "botocore>=1.42.96",
    "deepagents>=0.5.3",
    "gitpython>=3.1.47",
    "langchain-aws>=1.4.5",
    "langchain-core>=1.3.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
